removed 1.3 incompatibility: method static Boolean.valueOf() has been added in java-1.4
git-svn-id: http://scarab.tigris.org/svn/scarab@9456 3c7165bb-d2ef-0310-b724-bafd9a86081f